--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 /bin/
 /obj/
 /packages/
-/Astra.ImGui/#Generated/
-/Astra.ImGui.Native/*.gen.*
+/Astra.DearImGui/#Generated/
+/Astra.DearImGui.Native/*.gen.*
